# asdf

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
asdf/: consts.py  file_downloader.py  log_config.py  main.py  scripts.py  utils.py  xml_reader.py
tests/: test_main.py
