[tool.poetry]
authors = ["Vlada Dusek <v.dusek96@gmail.com>"]
description = "asdf project description"
name = "asdf"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
fastapi = "^0.95.1"
gunicorn = "^20.1.0"
httpx = "^0.24.1"
pydantic = "^1.10.8"
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
types-aiofiles = "^23.1.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
httpx = "^0.24.0"
ipython = "^8.13.2"
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
requests = "^2.30.0"

[tool.poetry.scripts]
dev = "asdf.scripts:run_dev"

[tool.isort]
known_first_party = ["asdf"]
line_length = 120
multi_line_output = 2
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
color_output = true
error_summary = true
ignore_missing_imports = true
pretty = true
show_absolute_path = false
show_error_codes = true

[tool.pytest]
python_files = "test_*.py"
testpaths = "tests"

[tool.pylint]
disable = [
  "invalid-name",
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "too-few-public-methods",
  "too-many-arguments",
]
extension-pkg-whitelist = "pydantic"
max-line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
